2005-01-25 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/uim/im_uim.c
	  (xksym_to_ukey): fixed typo.
	  (candidate_shift_page): impremented.

	* inputmethod/scim/im_scim_mod_if.c (im_scim_get_info):
	  fixed a segfault when scim daemon is not running.

	* xwindow/x_im.c (x_im_new): cleaned up error messages.
	* inputmethod/im_uim.c (im_uim_new): cleaned up error messages.

2005-01-24 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/iiimf/im_iiimf.c (show_available_gui_objects):
	  new function for debugging.

	* inputmethod/iiimf/im_iiimf.c, configure.in: added
	  -DHAVE_HOTKEY_NOTFY_EVENT and -DHAVE_AUX_GETVALUES_EVENT

	* inputmethod/uim/im_uim.c
	* inputmethod/m17nlib/im_m17nlib.c
	* inputmethod/iiimf/im_iiimf.c
	  (mlterm_syms): renamed to syms

	* inputmethod/scim/im_scim_mod_if.c (preedit_update):
	  dropped candidates, when position of editing segment was changed,

2005-01-23 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/scim/im_scim.cpp: minor bug fix.

2005-01-23 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/scim/im_scim.cpp: impremented property.

2005-01-23 MINAMI Hirokazu <minami@mistfall.net>

	* tool/mlconfig/mc_im.c: increased MAX_IM_INFO to make room for scim.

2005-01-23 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/scim/im_scim.cpp (im_scim_create_context): moved
	be->signal_connect_*() into
	* nputmethod/scim/im_scim.cpp (im_scim_initialize): this.

2005-01-23 Seiichi SATO <ssato@sh.rim.or.jp>

	SCIM (Smart Common Input Method platform) support:
	* configure.in:
	  - added '--enable-scim'
	  - added AC_PROG_CXX
	* inputmethod/scim/im_scim.cpp: new file
	* inputmethod/scim/im_scim.h: new file
	* inputmethod/scim/im_scim_mod_if.c: new file
	* inputmethod/scim/Makefile.in: new file

	* inputmethod/uim/im_uim.c, xwindow/x_im.c, xwindow/x_im.h:
	minor code cleanup.

2005-01-23 MINAAMI Hirokazu <minami@mistfall.net>

        Made cursor looks better (thanks to Ian Ward). 
	* mlterm/ml_vt100_parser.c: stopped to unify cursor color.